@@ -36,6 +36,7 @@ export(readLogRatioFile)
 export(readSegmentationFile)
 export(runAbsoluteCN)
 export(segmentationCBS)
+export(segmentationGATK4)
 export(segmentationHclust)
 export(segmentationPSCBS)
 export(setMappingBiasVcf)
@@ -163,6 +164,7 @@ importFrom(stats,runif)
 importFrom(stats,t.test)
 importFrom(stats,weighted.mean)
 importFrom(tools,file_ext)
+importFrom(utils,compareVersion)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,object.size)
